--- a/styles/_mixins.scss
+++ b/styles/_mixins.scss
@@ -44,9 +44,16 @@
     display: inline-block;
     max-width: 172px;
     width: 100%;
-    padding: 10px 0 11px;
+    padding: 10px 0 10px;
     background-color: $button-color;
+    border: 1px solid $button-color;
     color: $white;
     @include font(600, 1rem, 27px);
     text-align: center;
+    transition: all .2s ease-in-out;
+
+    &:hover {
+        background-color: $white;
+        color: $button-color;
+    }
 }
