--- a/styles/main.scss
+++ b/styles/main.scss
@@ -179,7 +179,25 @@
 
         h5 {
             @include font(bold, 1.125rem, 27px);
-            margin-bottom: 45px;
+            margin-bottom: 15px;
+        }
+
+        .partners-img-wrapper {
+            @include flex(row, flex-start, center);
+            flex-wrap: wrap;
+            margin-left: -20px;
+
+            .partner-img-wrapper {
+                padding: 20px 20px 0;
+            }
+        }
+
+        @include maxWidth(730px) {
+            text-align: center;
+
+            .partners-img-wrapper {
+                @include flex(row, center, center);
+            }
         }
     }
 
