--- a/styles/main.scss
+++ b/styles/main.scss
@@ -784,9 +784,11 @@
                         .link-img {
                             width: 40px;
                             height: 40px;
-                            background-color: #C4C4C4;
-                            border-radius: 4px;
                             margin-right: 24px;
+
+                            img {
+                                max-width: 100%;
+                            }
                         }
                     }
                 }
