--- a/styles/main.css
+++ b/styles/main.css
@@ -161,8 +161,76 @@ li {
   color: #3BDFAB;
 }
 
-@media screen and (max-width: 925px) {
+.navigation-wrapper nav .menu-icon {
+  display: none;
+}
+
+@media screen and (max-width: 950px) {
   .navigation-wrapper nav ul {
+    display: none;
+  }
+  .navigation-wrapper nav .menu-icon {
+    display: block;
+  }
+}
+
+.mobile-navigation {
+  position: fixed;
+  top: 0;
+  right: -100%;
+  bottom: 0;
+  background: #FFF;
+  z-index: 100;
+  max-width: 300px;
+  width: 70%;
+  -webkit-transition: all .5s ease-in-out;
+  transition: all .5s ease-in-out;
+}
+
+.mobile-navigation.active {
+  right: 0;
+}
+
+.mobile-navigation nav {
+  padding: 40px;
+}
+
+.mobile-navigation nav li {
+  padding: 20px 0;
+}
+
+.mobile-navigation .close-btn {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
+
+@media screen and (min-width: 950px) {
+  .mobile-navigation {
+    display: none;
+  }
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  width: 100%;
+  background: rgba(51, 51, 51, 0.5);
+  z-index: 50;
+  pointer-events: none;
+  opacity: 0;
+}
+
+.overlay.active {
+  pointer-events: all;
+  opacity: 1;
+}
+
+@media screen and (min-width: 950px) {
+  .overlay {
     display: none;
   }
 }
